<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    app:cardBackgroundColor="@color/colorWhite">

    <RelativeLayout
        android:id="@+id/relativeLayoutParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="2dp"
        android:paddingBottom="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.4">

                <TextView
                    android:id="@+id/txtSerialName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:paddingTop="4dp"
                    android:text="1"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4.6"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtItemName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/pind_tadka"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txtItemPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/rs_200"
                    android:textColor="@color/cost_for_one"
                    android:textSize="14sp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btnAddToCart"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/rounded_view_for_menu_red"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/add_to_cart_btn"
                    android:textColor="#fff"
                    android:textSize="15sp" />

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>