<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:background="@color/colorWhite"
    app:cardCornerRadius="6dp">

    <LinearLayout
        android:id="@+id/llContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="6">

        <ImageView
            android:id="@+id/imgRestaurant"
            android:layout_width="50dp"
            android:layout_height="120dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="1.3"
            android:padding="6dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_default_image_restaurant"
            tools:ignore="ContentDescription" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="3.6"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtRestaurantName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:text="@string/pind_tadka"
                android:textColor="@color/colorBlack"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtPricePerPerson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtRestaurantName"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:drawableStart="@drawable/ic_rupee_indian"
                android:padding="6dp"
                android:text="@string/_300_person"
                android:textSize="15sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1.1">

            <TextView
                android:id="@+id/txtFavourite"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:background="@drawable/ic_fav_outline"
                android:tag="unliked" />

            <TextView
                android:id="@+id/txtRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtFavourite"
                android:layout_centerHorizontal="true"
                android:drawableStart="@drawable/ic_rating_star"
                android:drawablePadding="4dp"
                android:padding="4dp"
                android:text="@string/_4_5"
                android:textColor="#ffc107"
                android:textFontWeight="@android:integer/config_longAnimTime"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="UnusedAttribute" />

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>